--- a/templates/Department/departmentadd.html
+++ b/templates/Department/departmentadd.html
@@ -24,41 +24,51 @@ Preskool | Department Add
       <div class="col-sm-12">
          <div class="card">
             <div class="card-body">
-               <form>
+
+               <form action="{% url 'departmentadd' %}" method='POST'>
+
+                  {% csrf_token %}
+
                   <div class="row">
                      <div class="col-12">
                         <h5 class="form-title"><span>Department Details</span></h5>
                      </div>
-                     <div class="col-12 col-sm-4">
+                       
+                     {% comment %} {% include "Common/message.html" %}  {% endcomment %}
+                     {% comment %} <div class="col-12 col-sm-4">
                         <div class="form-group local-forms">
                            <label>Department ID <span class="login-danger">*</span></label>
                            <input type="text" class="form-control">
                         </div>
-                     </div>
+                     </div> {% endcomment %}
+
                      <div class="col-12 col-sm-4">
                         <div class="form-group local-forms">
                            <label>Department Name <span class="login-danger">*</span></label>
-                           <input type="text" class="form-control">
+                           <input type="text" class="form-control" name="department_name">
                         </div>
                      </div>
                      <div class="col-12 col-sm-4">
                         <div class="form-group local-forms">
                            <label>Head of Department <span class="login-danger">*</span></label>
-                           <input type="text" class="form-control">
+                           <input type="text" class="form-control" name="department_head_name">
                         </div>
                      </div>
-                     <div class="col-12 col-sm-4">
+
+                     {% comment %} <div class="col-12 col-sm-4">
                         <div class="form-group local-forms calendar-icon">
                            <label>Department Start Date <span class="login-danger">*</span></label>
                            <input class="form-control datetimepicker" type="text" placeholder="DD-MM-YYYY">
                         </div>
-                     </div>
-                     <div class="col-12 col-sm-4">
+                     </div> {% endcomment %}
+
+                     {% comment %} <div class="col-12 col-sm-4">
                         <div class="form-group local-forms">
                            <label>No of Students <span class="login-danger">*</span></label>
                            <input type="text" class="form-control">
                         </div>
-                     </div>
+                     </div> {% endcomment %}
+
                      <div class="col-12">
                         <div class="student-submit">
                            <button type="submit" class="btn btn-primary">Submit</button>
