--- a/templates/Common/signupPage.html
+++ b/templates/Common/signupPage.html
@@ -21,11 +21,20 @@ Preskool | Signup Page
                         <h1>Welcome to Preskool</h1>
                         <h1>Sign Up</h1>
 
-                        {% if messages %}
+                        {% comment %} {% if messages %}
                            {% for message in messages %}
                             {% if message.tags %}  <script>alert("{{ message }}")</script> {% endif %}
                            {% endfor %}                   
-                        {% endif %}
+                        {% endif %} {% endcomment %}
+
+                        {% for message in messages %}
+                           <div class="alert {{ message.tags }} alert-dismissible" role="alert">
+                              <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                 <span aria-hidden="true">&times;</span>
+                              </button>
+                              {{ message }}
+                           </div>
+                        {% endfor %}
 
                         <p class="account-subtitle">Enter details to create your account</p>
 
