--- a/templates/Department/departmentlist.html
+++ b/templates/Department/departmentlist.html
@@ -53,6 +53,16 @@ Preskool | Department List
                       <div class="col">
                          <h3 class="page-title">Departments</h3>
                       </div>
+
+                      {% comment %} {% include "Common/message.html" %} {% endcomment %}
+                      
+                    {% if messages %}
+                           {% for message in messages %}
+                              {% if message.tags %}  <script>alert("{{ message }}")</script> {% endif %}
+                           {% endfor %}                   
+                        {% endif %} 
+
+
                       <div class="col-auto text-end float-end ms-auto download-grp">
                          <a href="#" class="btn btn-outline-primary me-2"><i class="fas fa-download"></i> Download</a>
                          <a href="add-department.html" class="btn btn-primary"><i class="fas fa-plus"></i></a>
