--- a/templates/Student/studentadd.html
+++ b/templates/Student/studentadd.html
@@ -43,6 +43,7 @@ Preskool | Inbox
                             <input class="form-control" type="text" placeholder="Enter First Name">
                          </div>
                       </div>
+
                       <div class="col-12 col-sm-4">
                          <div class="form-group local-forms">
                             <label>Gender <span class="login-danger">*</span></label>
@@ -55,6 +56,7 @@ Preskool | Inbox
                             <span class="select2 select2-container select2-container--default" dir="ltr" data-select2-id="2" style="width: 100%;"><span class="selection"><span class="select2-selection select2-selection--single" role="combobox" aria-haspopup="true" aria-expanded="false" tabindex="0" aria-disabled="false" aria-labelledby="select2-xwnq-container"><span class="select2-selection__rendered" id="select2-xwnq-container" role="textbox" aria-readonly="true" title="Select Gender">Select Gender</span><span class="select2-selection__arrow" role="presentation"><b role="presentation"></b></span></span></span><span class="dropdown-wrapper" aria-hidden="true"></span></span>
                          </div>
                       </div>
+
                       <div class="col-12 col-sm-4">
                          <div class="form-group local-forms calendar-icon">
                             <label>Date Of Birth <span class="login-danger">*</span></label>
@@ -102,18 +104,23 @@ Preskool | Inbox
                             <input class="form-control" type="text" placeholder="Enter Email Address">
                          </div>
                       </div>
+
                       <div class="col-12 col-sm-4">
-                         <div class="form-group local-forms">
-                            <label>Class <span class="login-danger">*</span></label>
-                            <select class="form-control select select2-hidden-accessible" data-select2-id="10" tabindex="-1" aria-hidden="true">
-                               <option data-select2-id="12">Please Select Class </option>
-                               <option>12</option>
-                               <option>11</option>
-                               <option>10</option>
-                            </select>
-                            <span class="select2 select2-container select2-container--default" dir="ltr" data-select2-id="11" style="width: 100%;"><span class="selection"><span class="select2-selection select2-selection--single" role="combobox" aria-haspopup="true" aria-expanded="false" tabindex="0" aria-disabled="false" aria-labelledby="select2-5i03-container"><span class="select2-selection__rendered" id="select2-5i03-container" role="textbox" aria-readonly="true" title="Please Select Class ">Please Select Class </span><span class="select2-selection__arrow" role="presentation"><b role="presentation"></b></span></span></span><span class="dropdown-wrapper" aria-hidden="true"></span></span>
-                         </div>
-                      </div>
+                        <div class="form-group local-forms">
+                           <label>Department <span class="login-danger">*</span></label>
+                           <select class="form-control select select2-hidden-accessible" data-select2-id="1" tabindex="-1" aria-hidden="true">
+                              <option data-select2-id="3">Select Department</option>
+                              {% for i in department %}
+                              
+                              <option value='{{i.id}}'>{{i.id}}:-{{i.department_name}}</option>
+                              <option value='{{i.id}}'>{{i.id}}:-{{i.department_head_name}}</option>
+                              {% endfor %}
+                              
+                           </select>
+                           <span class="select2 select2-container select2-container--default" dir="ltr" data-select2-id="2" style="width: 100%;"><span class="selection"><span class="select2-selection select2-selection--single" role="combobox" aria-haspopup="true" aria-expanded="false" tabindex="0" aria-disabled="false" aria-labelledby="select2-xwnq-container"><span class="select2-selection__rendered" id="select2-xwnq-container" role="textbox" aria-readonly="true" title="Select Gender">Select Department</span><span class="select2-selection__arrow" role="presentation"><b role="presentation"></b></span></span></span><span class="dropdown-wrapper" aria-hidden="true"></span></span>
+                        </div>
+                     </div>
+
                       <div class="col-12 col-sm-4">
                          <div class="form-group local-forms">
                             <label>Section <span class="login-danger">*</span></label>
